dealing gracefully with null for before/afterUuid